--- a/index.html
+++ b/index.html
@@ -70,88 +70,109 @@
   </section>
 
 
-    <!-- Features -->
-    <section class="py-16 bg-white">
-      <div class="container mx-auto px-4">
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
-          <div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-md">
-            <img
-              src="images\walkers.png"
-              style="width: 250px; height: 200px;"
-              alt="Walker"
-              class="w-20 mx-auto mb-4"
-            />
-            <h3 class="font-bold text-lg">Trusted Walkers</h3>
-            <p class="text-sm text-gray-600">
-              Verified dog walkers with real-time tracking and instant updates.
-            </p>
-          </div>
-          <div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-md">
-            <img
-              src="images\grooming.png"
-              style="width: 200px; height: 200px;"
-              alt="Groomer"
-              class="w-20 mx-auto mb-4"
-            />
-            <h3 class="font-bold text-lg">Top Groomers</h3>
-            <p class="text-sm text-gray-600">
-              Book professional grooming sessions for your pet at your
-              convenience.
-            </p>
-          </div>
-          <div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-md">
-            <img
-              src="images\boarding.png"
-              style="width: 250px; height: 200px;"
-              alt="Boarding"
-              class="w-20 mx-auto mb-4"
-            />
-            <h3 class="font-bold text-lg">Comfortable Boarding</h3>
-            <p class="text-sm text-gray-600">
-              Safe, loving boarding options for short or long stays.
-            </p>
-          </div>
-<div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-md">
-            <img
-              src="images\vet.png"
-              style="width: 250px; height: 200px;"
-              alt="Veterinary"
-              class="w-20 mx-auto mb-4"
-            />
-            <h3 class="font-bold text-lg">Certified Vets</h3>
-            <p class="text-sm text-gray-600">
-              Connect with licensed veterinarians for routine exams, urgent care or long-term health monitoring.
-            </p>
-          </div>
-<div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-md">
-            <img
-              src="images\trainers.png"
-              style="width: 200px; height: 200px;"
-              alt="Trainers"
-              class="w-20 mx-auto mb-4"
-            />
-            <h3 class="font-bold text-lg">Skilled Trainers</h3>
-            <p class="text-sm text-gray-600">
-              From basic commands to advanced tricks, our expert trainers make learning fun and rewarding for your furry friend.
-            </p>
-          </div>
+<!-- Features -->
+<section class="py-16 bg-white">
+  <div class="container mx-auto px-4">
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-8 text-center">
 
-<div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-md">
-            <img
-              src="images\sitter.png"
-              alt="Sitters"
-              style="width: 200px; height: 200px;"
-              class="w-20 mx-auto mb-4"
-            />
-            <h3 class="font-bold text-lg">Certified Sitters</h3>
-            <p class="text-sm text-gray-600">
-              From basic commands to advanced tricks, our expert trainers make learning fun and rewarding for your furry friend.
-            </p>
-          </div>
-
-        </div>
+      <!-- Trusted Walkers -->
+      <a href="Trusted Walkers.html" class="block hover:scale-105 transform transition">
+      <div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-md">
+        <img
+          src="images/walk.jpg"
+          alt="Walker"
+          class="mx-auto mb-4 rounded-xl object-cover"
+          style="width: 250px; height: 200px;"
+        />
+        <h3 class="font-bold text-lg">Trusted Walkers</h3>
+        <p class="text-sm text-gray-600">
+          Verified dog walkers with real-time tracking and instant updates.
+        </p>
       </div>
-    </section>
+      </a>
+
+      <!-- Top Groomers -->
+      <a href="Top Groomers.html" class="block hover:scale-105 transform transition">
+      <div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-md">
+        <img
+          src="images/groom.jpg"
+          alt="Groomer"
+          class="mx-auto mb-4 rounded-xl object-cover"
+          style="width: 250px; height: 200px;"
+        />
+        <h3 class="font-bold text-lg">Top Groomers</h3>
+        <p class="text-sm text-gray-600">
+          Book professional grooming sessions for your pet at your convenience.
+        </p>
+      </div>
+      </a>
+
+      <!-- Comfortable Boarding -->
+      <a href="Comfortable Boarding.html" class="block hover:scale-105 transform transition">
+      <div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-md">
+        <img
+          src="images/board.jpg"
+          alt="Boarding"
+          class="mx-auto mb-4 rounded-xl object-cover"
+          style="width: 250px; height: 200px;"
+        />
+        <h3 class="font-bold text-lg">Comfortable Boarding</h3>
+        <p class="text-sm text-gray-600">
+          Safe, loving boarding options for short or long stays.
+        </p>
+      </div>
+      </a>
+      <!-- Certified Vets -->
+      <a href="Certified Vets.html" class="block hover:scale-105 transform transition">
+      <div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-md">
+        <img
+          src="images/doc.jpg"
+          alt="Veterinary"
+          class="mx-auto mb-4 rounded-xl object-cover"
+          style="width: 250px; height: 200px;"
+        />
+        <h3 class="font-bold text-lg">Certified Vets</h3>
+        <p class="text-sm text-gray-600">
+          Connect with licensed veterinarians for exams, urgent care, or long-term health monitoring.
+        </p>
+      </div>
+      </a>
+
+      <!-- Skilled Trainers -->
+      <a href="Skilled Trainers.html" class="block hover:scale-105 transform transition">
+      <div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-md">
+        <img
+          src="images/train.jpg"
+          alt="Trainers"
+          class="mx-auto mb-4 rounded-xl object-cover"
+          style="width: 250px; height: 200px;"
+        />
+        <h3 class="font-bold text-lg">Skilled Trainers</h3>
+        <p class="text-sm text-gray-600">
+          From basic commands to advanced tricks, our trainers make learning fun and rewarding.
+        </p>
+      </div>
+      </a>
+
+      <!-- Certified Sitters -->
+      <a href="Certified Sitters.html" class="block hover:scale-105 transform transition">
+      <div class="p-6 bg-blue-50 rounded-xl shadow hover:shadow-md">
+        <img
+          src="images/sit.jpg"
+          alt="Sitters"
+          class="mx-auto mb-4 rounded-xl object-cover"
+          style="width: 250px; height: 200px;"
+        />
+        <h3 class="font-bold text-lg">Certified Sitters</h3>
+        <p class="text-sm text-gray-600">
+          Experienced sitters to care for your pet in your home or theirs—anytime you need.
+        </p>
+      </div>
+      </a>  
+
+    </div>
+  </div>
+</section>
 
     <!-- About Section -->
     <section class="py-16">
