--- a/booking.html
+++ b/booking.html
@@ -35,7 +35,7 @@
         <nav class="space-x-6">
           <a href="index.html" class="hover:text-blue-600">Home</a>
           <a href="services.html" class="hover:text-blue-600">Services</a>
-          <a href="certified-vets.html" class="hover:text-blue-600">Vets</a>
+          <a href="vets.html" class="hover:text-blue-600">Vets</a>
           <a href="shop.html" class="hover:text-blue-600">Shop</a>
 
           <a href="booking.html" class="text-blue-600 font-semibold"
