--- a/dashboard.html
+++ b/dashboard.html
@@ -33,7 +33,7 @@
         <nav class="space-x-6">
           <a href="index.html" class="hover:text-blue-600">Home</a>
           <a href="services.html" class="hover:text-blue-600">Services</a>
-          <a href="certified-vets.html" class="hover:text-blue-600">Vets</a>
+          <a href="vets.html" class="hover:text-blue-600">Vets</a>
           <a href="shop.html" class="hover:text-blue-600">Shop</a>
 
           <a href="booking.html" class="hover:text-blue-600">Book Now</a>
