--- a/shop.html
+++ b/shop.html
@@ -85,6 +85,7 @@
         <nav class="space-x-6">
           <a href="index.html" class="hover:text-blue-600">Home</a>
           <a href="services.html" class="hover:text-blue-600">Services</a>
+          <a href="vets.html" class="hover:text-blue-600">Vets</a>
           <a href="shop.html" class="text-blue-600 font-semibold">Shop</a>
           <a href="booking.html" class="hover:text-blue-600">Book Now</a>
           <a href="dashboard.html" class="hover:text-blue-600">Dashboard</a>
