--- a/vets.html
+++ b/vets.html
@@ -23,6 +23,11 @@
           <a href="services.html" class="hover:text-blue-600">Services</a>
           <a href="certified-vets.html" class="hover:text-blue-600">Vets</a>
           <a href="shop.html" class="hover:text-blue-600">Shop</a>
+          <a href="#" class="hover:text-blue-600 relative">
+            🛒 Cart
+            <span id="cart-count" class="bg-red-500 text-white text-xs px-2 py-0.5 rounded-full absolute -top-2 -right-3">0</span>
+          </a>
+          
           <a href="booking.html" class="hover:text-blue-600">Book Now</a>
           <a href="dashboard.html" class="hover:text-blue-600">Dashboard</a>
           <a href="login.html" class="hover:text-blue-600">Login</a>
