--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <a href="services.html" class="hover:text-blue-600">Services</a>
           <a href="vets.html" class="hover:text-blue-600">Vets</a>
           <a href="shop.html" class="hover:text-blue-600">Shop</a>
-          <a href="#" class="hover:text-blue-600 relative">
+          <a href="cart.html" class="hover:text-blue-600 relative">
             🛒 Cart
             <span id="cart-count" class="bg-red-500 text-white text-xs px-2 py-0.5 rounded-full absolute -top-2 -right-3">0</span>
           </a>
