--- a/shop.html
+++ b/shop.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="css/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet" />
     <style>
+      body {
+        font-family: "Poppins", sans-serif;
+        cursor: url("images/cursor.cur"), auto;
+      }
+    </style>
+    <style>
       .shop-grid {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
