--- a/vets.html
+++ b/vets.html
@@ -10,6 +10,12 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <style>
+      body {
+        font-family: "Poppins", sans-serif;
+        cursor: url("images/cursor.cur"), auto;
+      }
+    </style>
   </head>
   <body class="bg-blue-50 text-gray-800">
     <!-- Header -->
