--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
             <div class="text-center">
               <img
-                src="https://placehold.co/150x150"
+                src="images/jidnyasa.png"
                 class="mx-auto rounded-full mb-3"
                 alt="Team Member"
               />
@@ -228,7 +228,7 @@
             </div>
             <div class="text-center">
               <img
-                src="https://placehold.co/150x150"
+                src="images/swarada.jpg"
                 class="mx-auto rounded-full mb-3"
                 alt="Team Member"
               />
@@ -237,7 +237,7 @@
             </div>
             <div class="text-center">
               <img
-                src="https://placehold.co/150x150"
+                src="images/asmi.png"
                 class="mx-auto rounded-full mb-3"
                 alt="Team Member"
               />
