--- a/vets.html
+++ b/vets.html
@@ -13,17 +13,23 @@
   </head>
   <body class="bg-blue-50 text-gray-800">
     <!-- Header -->
-    <header class="bg-white shadow sticky top-0 z-50">
+    <header class="bg-white shadow-md sticky top-0 z-50">
       <div
         class="container mx-auto px-4 py-4 flex justify-between items-center"
       >
+      <div class="flex items-center space-x-2">
+        <img src="images/logo.png" alt="Logo" class="w-20 h-20 rounded-full" />
         <h1 class="text-2xl font-bold text-blue-600">PawPalace</h1>
+      </div>
         <nav class="space-x-6">
           <a href="index.html" class="hover:text-blue-600">Home</a>
           <a href="services.html" class="hover:text-blue-600">Services</a>
-          <a href="certified-vets.html" class="hover:text-blue-600">Vets</a>
+          <a href="vets.html" class="hover:text-blue-600">Vets</a>
           <a href="shop.html" class="hover:text-blue-600">Shop</a>
-          <a href="booking.html" class="hover:text-blue-600">Book Now</a>
+
+          <a href="booking.html" class="text-blue-600 font-semibold"
+            >Book Now</a
+          >
           <a href="dashboard.html" class="hover:text-blue-600">Dashboard</a>
           <a href="login.html" class="hover:text-blue-600">Login</a>
         </nav>
