--- a/cart.html
+++ b/cart.html
@@ -32,6 +32,7 @@
         <a href="booking.html" class="hover:text-blue-600">Book Now</a>
         <a href="dashboard.html" class="hover:text-blue-600">Dashboard</a>
         <a href="login.html" class="hover:text-blue-600">Login</a>
+        <a href="Offers.html" class="hover:text-blue-600">Offers</a>
       </nav>
     </div>
   </header>
