--- a/dashboard.html
+++ b/dashboard.html
@@ -45,6 +45,7 @@
           <a href="booking.html" class="hover:text-blue-600">Book Now</a>
           <a href="dashboard.html" class="text-blue-600 font-semibold">Dashboard</a>
           <a href="#" onclick="logout()" class="hover:text-blue-600">Logout</a>
+          <a href="Offers.html" class="hover:text-blue-600">Offers</a>
         </nav>
       </div>
     </header>
