--- a/Offers.html
+++ b/Offers.html
@@ -74,6 +74,7 @@
           <a href="booking.html" class="hover:text-blue-600">Book Now</a>
           <a href="dashboard.html" class="hover:text-blue-600">Dashboard</a>
           <a href="login.html" class="hover:text-blue-600">Login</a>
+          <a href="Offers.html" class="hover:text-blue-600">Offers</a>
         </nav>
       </div>
     </header>
@@ -96,7 +97,6 @@
             </p>
             <a href="dashboard.html">
                 <button onclick="saveMembershipOffer('user123', 'Adoption Heroes')">Join Now</button>
-                Join Now
             </a> 
           </div>
 
@@ -110,7 +110,6 @@
             </p>
             <a href="dashboard.html">
                 <button onclick="saveMembershipOffer('user123', 'Adoption Heroes')">Join Now</button>
-                Join Now
             </a> 
           </div>
 
@@ -124,7 +123,6 @@
             </p>
             <a href="dashboard.html">
                 <button onclick="saveMembershipOffer('user123', 'Adoption Heroes')">Join Now</button>
-                Join Now
             </a> 
           </div>
 
@@ -138,7 +136,6 @@
             </p>
             <a href="dashboard.html">
                   <button onclick="saveMembershipOffer('user123', 'Adoption Heroes')">Join Now</button>
-                  Join Now
             </a> 
           </div>
         </div>
